<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    android:background="@color/black_light">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_restaurant"
            android:icon="@drawable/restaurant"
            android:title="@string/restaurant" />

        <!--
        <item
            android:id="@+id/nav_magasin"
            android:icon="@drawable/shop"
            android:title="Magasin" />
        <item
            android:id="@+id/nav_patisseries"
            android:icon="@drawable/pattisserie"
            android:title="Patisseries" />
            -->
        <item
            android:id="@+id/nav_pharmacie"
            android:icon="@drawable/pharmacy"
            android:title="@string/Pharmacie" />

        <item
            android:id="@+id/nav_others"
            android:icon="@drawable/other"
            android:title="Service ekher" />


        <item
            android:id="@+id/nav_orders"
            android:icon="@drawable/orders"
            android:title="Historique" />

        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/contact"
            android:title="Contactina" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/settings"
            android:title="@string/Settings" />
        <item
            android:id="@+id/nav_report"
            android:icon="@drawable/report"
            android:title="@string/report" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout"
            android:title="@string/logout" />
    </group>
</menu>